Fix gridDisplay in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ h2 {
 }
 h3 {
   font-weight: bold;
-  margin-top: 4rem;
+  margin-top: 3rem;
   margin-bottom: .5rem;
 }
 
@@ -233,7 +233,7 @@ header,
 section,
 footer {
   width: 100%;
-  padding: 100px 1rem;
+  padding: 3rem 1rem;
 }
 
 header {
@@ -364,6 +364,9 @@ sup a {
   }
   code {
     background: var(--interaction-background);
+  }
+  #gridDisplay {
+    mix-blend-mode: screen;
   }
 }
 
